--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   flutter_staggered_grid_view: ^0.6.1
   flutter_slidable: ^2.0.0
   fl_chart: ^0.55.2
+  syncfusion_flutter_datepicker: ^20.3.52
   
   
 
