--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   flutter_slidable: ^2.0.0
   fl_chart: ^0.55.2
   syncfusion_flutter_datepicker: ^20.3.52
+  syncfusion_flutter_charts: ^20.3.52
   
   
 
