--- a/android/app/src/debug/AndroidManifest.xml
+++ b/android/app/src/debug/AndroidManifest.xml
@@ -6,3 +6,5 @@
     -->
     <uses-permission android:name="android.permission.INTERNET"/>
 </manifest>
+<!-- Provide required visibility configuration for API level 30 and above -->
+
