--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   fl_chart: ^0.55.2
   syncfusion_flutter_datepicker: ^20.3.52
   syncfusion_flutter_charts: ^20.3.52
+  url_launcher: ^6.1.6
+  splash_screen_view: ^3.0.0
   
   
 
@@ -74,7 +76,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets\splash_screen_icon.png
+    - assets\SPENDEE.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
