--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   fl_chart: ^0.55.2
   syncfusion_flutter_datepicker: ^20.3.52
   syncfusion_flutter_charts: ^20.3.52
+  splash_screen_view: ^3.0.0
   
   
 
@@ -75,7 +76,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets\splash_screen_icon.png
-  #   - images/a_dot_ham.jpeg
+    - assets\SPENDEE.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
